--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-# Python
+# ========================================
+# 只上传网站展示必需的文件
+# 排除所有开发工具、说明文档、脚本等
+# ========================================
+
+# Python 脚本和相关文件（开发工具，不需要上传）
+*.py
 __pycache__/
 *.py[cod]
 *$py.class
@@ -48,8 +54,28 @@ Desktop.ini
 *.bak
 *.log
 
-# 不需要上传的大文件
+# 说明文档（本地使用，不需要上传）
+README.md
+一键部署说明.md
+*.md
+# 但保留 GitHub Actions 需要的文档
+!.github/**/*.md
+
+# 批处理脚本（本地使用，不需要上传）
+*.bat
+
+# PDF 源文件（太大，不需要上传）
+产业图谱/*.pdf
+*.pdf
+
+# Word 文档（不需要上传）
+*.docx
+*.doc
+
+# 开发资料压缩包
 元素周期表系统开发资料_*.zip
 
 # 敏感配置文件（包含账号密码）
 .github-config.txt
+*密码*
+*登录*
